# ya-world

./: cabal.project  ya-world.cabal
Ya/: World.hs
