name: ya-world
version: 0.1.0.0
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules: Ya.World
  default-extensions: AllowAmbiguousTypes, DataKinds, ConstraintKinds, ExistentialQuantification, GADTs, QuantifiedConstraints, InstanceSigs, FlexibleContexts, FlexibleInstances, KindSignatures, LiberalTypeSynonyms, LambdaCase, FunctionalDependencies, MagicHash, MultiParamTypeClasses, NoImplicitPrelude, OverloadedStrings, PackageImports, PatternSynonyms, PolyKinds, RankNTypes, ViewPatterns, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeFamilyDependencies, TypeOperators, UnboxedTuples, DerivingVia
  ghc-options: -Wall -fno-warn-tabs -fno-strictness -fno-warn-orphans -fprint-potential-instances -Wno-missing-signatures
  build-depends: ya, ghc-prim
